# claude-code-telegrammer

./: .env.example  .mcp.json.example  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  test.yml
config/: telegram-master.yaml
docs/sphinx/: conf.py  index.rst  installation.rst  quickstart.rst
docs/sphinx/api/: claude_code_telegrammer.rst
hooks/: enforce_background_subagents.sh
lib/: auto-response.sh  common.sh  lock.sh  orochi-relay.sh  state-detection.sh
src/claude_code_telegrammer/: __init__.py  cli.py
src/claude_code_telegrammer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/claude_code_telegrammer/_skills/claude-code-telegrammer/: SKILL.md
templates/: telegrammer.yaml
tests/: test-state-detection.sh
ts/: package.json  telegram-server.ts
ts/lib/: access.ts  attachments.ts  config.ts  lock.ts  log.ts  poller.ts  store.ts  telegram-api.ts  tools.ts
ts/test/: access.test.ts  config.test.ts  lock.test.ts  preload.ts  store.test.ts  telegram-api.test.ts
