[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-telegrammer"
version = "0.4.0"
description = "Custom Telegram MCP server + TUI auto-responder for running Claude Code as an autonomous Telegram agent"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = ["claude-code", "telegram", "watchdog", "auto-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Unix Shell",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/claude-code-telegrammer"
Repository = "https://github.com/ywatanabe1989/claude-code-telegrammer.git"
Issues = "https://github.com/ywatanabe1989/claude-code-telegrammer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_telegrammer"]
